2012-05-29  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c (reset): Don't depend if DFU_SUPPORT or not.

	* polarssl-0.14.0/library/aes.c (FT0, FT1, FT2): Specify sections
	in detail, so that addresses won't be affected by compiler.
	* src/gnuk.ld.in (.sys): Define sections in detail.

	* boards/STBEE_MINI/board.h (SET_USB_CONDITION, GPIO_USB)
	(IOPORT_USB, SET_LED_CONDITION, GPIO_LED, IOPORT_LED)
	(FLASH_PAGE_SIZE): New.
	* boards/STBEE_MINI/board.c (USB_Cable_Config, set_led): Remove.

	* boards/STBEE/board.h (SET_USB_CONDITION, GPIO_USB, IOPORT_USB)
	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
	* boards/STBEE/board.c (USB_Cable_Config, set_led): Remove.

	* boards/CQ_STARM/board.h (SET_USB_CONDITION)
	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
	* boards/CQ_STARM/board.c (USB_Cable_Config, set_led): Remove.

2012-05-28  Niibe Yutaka  <gniibe@fsij.org>

	* boards/*/board.c (hwinit0): Removed...
	* boards/common/hwinit.c (hwinit0): ... and define here.
	(hwinit0) [DFU_SUPPORT]:  Don't set SCB->VTOR here.
	* src/sys.c (reset) [DFU_SUPPORT]: Set SCB->VTOR here.
	(flash_write): Range check.

	* polarssl-0.14.0/library/aes.c (FT0, FT1, FT2): Specify the
	section ".sys", so that we will have more room for flash ROM.
	* src/gnuk.ld.in (.sys): Add alignment settings.

	* tool/gnuk_upgrade.py (main): First 4096-byte of Gnuk is system
	block.  Don't send it to reGNUal.

	* regnual/sys.c (entry): Fix clearing BSS.  It is called with all
	interrupts disabled.

	* regnual/regnual.ld (_flash_start): It's 0x08001000 now, because
	there is system block now (was: 0x08000000).

2012-05-26  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c (reset): Set SCR->VCR here.

2012-05-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (.sys): New section.

	* boards/OLIMEX_STM32_H103/board.h (SET_USB_CONDITION, GPIO_USB)
	(IOPORT_USB, SET_LED_CONDITION, GPIO_LED, IOPORT_LED)
	(FLASH_PAGE_SIZE): New.