@@ -1,6 +1,11 @@
 2012-05-29  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/sys.c (reset): Don't depend if DFU_SUPPORT or not.
+	(flash_erase_all_and_exec): Rename and change the argument.
+	* src/gnuk.ld.in (__flash_start__): Real flash ROM address,
+	regardless of DFU_SUPPORT.
+	* src/main.c (main): Call flash_erase_all_and_exec with SRAM
+	address.
 
 	* polarssl-0.14.0/library/aes.c (FT0, FT1, FT2): Specify sections
 	in detail, so that addresses won't be affected by compiler.
